Update OpenAPI definition files
