# server/openapi-definition/openapi.json
@@ -1,27 +1,55 @@
 {
   "openapi" : "3.0.3",
   "info" : {
-    "title" : "server API",
-    "version" : "1.0-SNAPSHOT"
+    "title" : "BMS API Endpoints",
+    "description" : "Here is description of BMS API.",
+    "contact" : {
+      "name" : "BMS administrator",
+      "email" : "contact@email.example.com"
+    },
+    "license" : {
+      "name" : "MIT License",
+      "url" : "https://opensource.org/licenses/MIT"
+    },
+    "version" : "0.1.0"
   },
   "servers" : [ {
-    "url" : "http://localhost:8080",
-    "description" : "Auto generated value"
+    "url" : "http://localhost:8888",
+    "description" : "Local server"
   }, {
-    "url" : "http://0.0.0.0:8080",
-    "description" : "Auto generated value"
+    "url" : "http://192.168.0.119:8888",
+    "description" : "A remote server"
+  } ],
+  "tags" : [ {
+    "name" : "BMS basic API",
+    "description" : "BMS Common APIs for authenticated users"
+  }, {
+    "name" : "BMS guest API",
+    "description" : "API endpoints for guest users"
   } ],
   "paths" : {
-    "/api/v1/example" : {
+    "/api/v1/guest/players" : {
       "get" : {
-        "tags" : [ "Example Endpoint" ],
+        "tags" : [ "BMS guest API" ],
+        "parameters" : [ {
+          "name" : "X-Foo",
+          "in" : "header",
+          "description" : "test header parameter",
+          "schema" : {
+            "default" : "default-foo-value",
+            "type" : "string"
+          }
+        } ],
         "responses" : {
           "200" : {
-            "description" : "OK",
+            "description" : "Returns a list of players",
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "type" : "string"
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/Player"
+                  }
                 }
               }
             }
@@ -29,29 +57,73 @@
         }
       }
     },
-    "/api/v1/player" : {
+    "/api/v1/guest/teams" : {
       "get" : {
-        "tags" : [ "Example Endpoint" ],
+        "tags" : [ "BMS guest API" ],
         "responses" : {
           "200" : {
-            "description" : "OK"
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/Team"
+                  }
+                }
+              }
+            }
           }
         }
       }
     },
-    "/api/v1/team" : {
+    "/api/v1/players" : {
       "get" : {
-        "tags" : [ "Example Endpoint" ],
+        "tags" : [ "BMS basic API" ],
         "responses" : {
           "200" : {
-            "description" : "OK"
+            "description" : "Returns a list of players",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/Player"
+                  }
+                }
+              }
+            }
           }
         }
       }
     },
-    "/api/v1/team/{id}" : {
+    "/api/v1/teams" : {
       "get" : {
-        "tags" : [ "Example Endpoint" ],
+        "tags" : [ "BMS basic API" ],
+        "summary" : "Return a list of teams",
+        "description" : "Return a list of teams",
+        "responses" : {
+          "200" : {
+            "description" : "Returns a list of teams",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/Team"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/teams/{id}" : {
+      "get" : {
+        "tags" : [ "BMS basic API" ],
+        "summary" : "Return a team detail",
+        "description" : "Return a team detail",
         "parameters" : [ {
           "name" : "id",
           "in" : "path",
@@ -63,7 +135,77 @@
         } ],
         "responses" : {
           "200" : {
-            "description" : "OK"
+            "description" : "Returns the detail of a team",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "object",
+                  "properties" : {
+                    "id" : {
+                      "format" : "int32",
+                      "type" : "integer"
+                    },
+                    "name" : {
+                      "type" : "string"
+                    },
+                    "url_path" : {
+                      "maxLength" : 32,
+                      "type" : "string"
+                    },
+                    "at_bats" : {
+                      "format" : "double",
+                      "maximum" : 5,
+                      "minimum" : 0,
+                      "type" : "number"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  },
+  "components" : {
+    "schemas" : {
+      "Player" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "format" : "int32",
+            "type" : "integer"
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "team" : {
+            "$ref" : "#/components/schemas/Team"
+          },
+          "backNumber" : {
+            "type" : "string"
+          }
+        }
+      },
+      "Team" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "format" : "int32",
+            "type" : "integer"
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "url_path" : {
+            "maxLength" : 32,
+            "type" : "string"
+          },
+          "at_bats" : {
+            "format" : "double",
+            "maximum" : 5,
+            "minimum" : 0,
+            "type" : "number"
           }
         }
       }
